[package]
name = "unshare"
description = """
    The low-level interface for linux namespaces (containers)
"""
license = "MIT"
readme = "README.rst"
keywords = ["linux", "container", "namespace", "docker", "process"]
homepage = "http://github.com/tailhook/unshare"
documentation = "http://tailhook.github.io/unshare/"
version = "0.1.4"
authors = ["paul@colomiets.name"]

[dependencies]
libc = "0.2.4"
nix = "0.4.0"

[dev-dependencies]
argparse = "*"

[lib]
name = "unshare"
path = "src/lib.rs"

